--- a/JavaWebCreate/web/index.html
+++ b/JavaWebCreate/web/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body bgcolor = green onload="formlogin.login.focus()">
+<body style="background-color: greenyellow;" onload="formlogin.email.focus()">
         <br><br><br><br><br><br>
         <form action = "javaJSP\login.jsp" name=formlogin  method=POST>
             <div align = center>
@@ -15,7 +15,7 @@
                             <td></tr>
                     <br>
                     <tr><td></td><td colspan = 2>
-                            <input type = button onclick = "window.location.assign('javaJSP/registro.jsp');" value = "Registrar">
+                            <input type = button onclick = "window.location.assign('registro.html');" value = "Registrar">
                             </td></tr>
                 </table>
             </div>
